--- a/frontend/shared/scss/elements/body.scss
+++ b/frontend/shared/scss/elements/body.scss
@@ -1,7 +1,7 @@
 @use "@stamhoofd/scss/base/fonts.scss";
 @use "@stamhoofd/scss/base/variables.scss" as *;
 
-:root {
+:root, :host {
     // Always force scroll availability on mobile browsers, this is to fix glitches when
     // the tabbars should become visible after transitioning from a long to a short modal
     // min-height: 100vh;
@@ -104,19 +104,21 @@
 
 }
 
-body {
+body, :host {
     --color-current-background: #{$color-background};
     --color-current-background-shade: #{$color-background-shade};
-
-    background: $color-background;
     color: $color-dark;
 
     // Fix clarity city spacing
     letter-spacing: -0.01em;
 }
 
+body {
+    background: $color-background;
+}
+
 body,
-html {
+html, :host {
     margin: 0;
     padding: 0;
     font-family: "Metropolis", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
