--- a/frontend/shared/scss/base/text-styles.scss
+++ b/frontend/shared/scss/base/text-styles.scss
@@ -267,6 +267,22 @@
        padding-top: 3px; 
     }
 
+    &.large {
+        font-size: 17px;
+
+        + p {
+            padding-top: 4px; 
+        }
+
+        @media (max-width: 400px) {
+            font-size: 16px;
+
+            + p {
+                padding-top: 3px; 
+            }
+        }
+    }
+
     &.larger {
         font-size: 20px;
 
