Implemented sender based permissions in backend

--- a/frontend/shared/scss/components/inputs.scss
+++ b/frontend/shared/scss/components/inputs.scss
@@ -245,6 +245,12 @@ select.input {
         &::before {
             right: 10px;
         }
+
+        &.no-padding {
+            &::before {
+                right: 0;
+            }
+        }
     }
 }
 
