Added email recipient view

--- a/frontend/shared/scss/base/text-styles.scss
+++ b/frontend/shared/scss/base/text-styles.scss
@@ -531,7 +531,7 @@
     font-variation-settings: 'opsz' 19;
 }
 
-.style-description, .style-description-large, .style-description-small, .style-title-list, .style-title-prefix {
+.style-description, .style-description-large, .style-description-small, .style-title-list, .style-title-prefix, .style-definition-label {
     /**
         Small optimizations for modern browsers only
     */
