--- a/frontend/shared/scss/layout/st-view.scss
+++ b/frontend/shared/scss/layout/st-view.scss
@@ -81,7 +81,43 @@ body.modern.web-iOS {
     > main {
         // We fixed the safe area, no need to recorrect it again
         --st-safe-area-top: 0px;
+
+        container-type: inline-size;
+        container-name: st-view;
+
+        &.center {
+            &:not(.small) {
+                @media (min-width: 900px) {
+                    // Auto center all views on desktop
+                    --st-horizontal-padding: 0px;
+                    --st-view-center-padding: calc((var(--vw, 1vw)*100 - var(--st-view-max-width, 800px)) / 2);
+                    --st-view-center-padding: max(var(--st-view-horizontal-padding), calc((var(--vw, 1vw)*100 - var(--st-view-max-width, 800px)) / 2));
+    
+                }
+            }
+    
+            &.small {
+                --st-view-max-width: 400px;
+    
+                @media (min-width: 500px) {
+                    // Auto center all views on desktop
+                    --st-horizontal-padding: 0px;
+                    --st-view-center-padding: calc((var(--vw, 1vw)*100 - var(--st-view-max-width, 800px)) / 2);
+                    --st-view-center-padding: max(var(--st-view-horizontal-padding), calc((var(--vw, 1vw)*100 - var(--st-view-max-width, 800px)) / 2));
+                }
+            }
+    
+            .popup &,
+            .sheet &,
+            .split-view-controller>.detail & {
+                --st-view-center-padding: 0px;
+                --st-horizontal-padding: var(--st-view-horizontal-padding);
+            }
+        }
+
         padding: 0 var(--st-horizontal-padding, 40px) 0 var(--st-horizontal-padding, 40px);
+        padding: 0 max(var(--st-view-center-padding, 0px), var(--st-horizontal-padding, 40px)) 0 max(var(--st-view-center-padding, 0px), var(--st-horizontal-padding, 40px));
+        
         flex-shrink: 1;
         flex-grow: 1;
         min-height: 0;
@@ -200,7 +236,7 @@ body.modern.web-iOS {
                 padding-bottom: calc(var(--st-safe-area-bottom, 0px) + 300px + var(--default-footer-padding, 0px));
             }
 
-            transition: transform 0.2s;
+            transition: transform 0.05s 0.35s ease;
             transform: translateY(calc(-1 * var(--bottom-padding, 0px)));
 
             // Show above keyboard with a specific class that will move it up
