Fixed typo and duplicate error message

--- a/frontend/shared/scss/components/errors.scss
+++ b/frontend/shared/scss/components/errors.scss
@@ -137,6 +137,10 @@
         }
     }
 
+    >.icon:last-child {
+        flex-shrink: 0;
+    }
+
     @media (max-width: 400px){
         flex-direction: column;
         align-items: flex-start;
